change mineral filters and add map popup styles

--- a/components/localities/popup-style.css
+++ b/components/localities/popup-style.css
@@ -4,3 +4,9 @@
 .leaflet-popup-content {
     margin: 0px;
 }
+
+.request-popup .leaflet-popup-content-wrapper {
+    padding: 0px;
+} .leaflet-popup-content {
+    margin: 0px;
+}
